syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductInventoryExtraProto";
option objc_class_prefix = "ProductInventoryExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Inventory Item Attribute
message InventoryItemAttributeData {
    option (routines.entity_type) = "InventoryItemAttribute";
    option (routines.keys).keys = "inventory_item_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId, attrName
    // fields
        
    string inventory_item_id = 1 [json_name = "inventory_item_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string attr_value = 3 [json_name = "attr_value"];    
    string attr_description = 4 [json_name = "attr_description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message InventoryItemAttributeList{
    repeated InventoryItemAttributeData values=1;
}


// Inventory Item Label
message InventoryItemLabelData {
    option (routines.entity_type) = "InventoryItemLabel";
    option (routines.keys).keys = "inventory_item_label_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemLabelId
    // fields
        
    string inventory_item_label_id = 1 [json_name = "inventory_item_label_id"];    
    string inventory_item_label_type_id = 2 [json_name = "inventory_item_label_type_id"];    
    string description = 3 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message InventoryItemLabelList{
    repeated InventoryItemLabelData values=1;
}


// Inventory Item Label Applicability
message InventoryItemLabelApplData {
    option (routines.entity_type) = "InventoryItemLabelAppl";
    option (routines.keys).keys = "inventory_item_id, inventory_item_label_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId, inventoryItemLabelTypeId
    // fields
        
    string inventory_item_id = 1 [json_name = "inventory_item_id"];    
    string inventory_item_label_type_id = 2 [json_name = "inventory_item_label_type_id"];    
    string inventory_item_label_id = 3 [json_name = "inventory_item_label_id"];    
    int64 sequence_num = 4 [json_name = "sequence_num"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message InventoryItemLabelApplList{
    repeated InventoryItemLabelApplData values=1;
}


// Inventory Item Label Type
message InventoryItemLabelTypeData {
    option (routines.entity_type) = "InventoryItemLabelType";
    option (routines.keys).keys = "inventory_item_label_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemLabelTypeId
    // fields
        
    string inventory_item_label_type_id = 1 [json_name = "inventory_item_label_type_id"];    
    string parent_type_id = 2 [json_name = "parent_type_id"];    
    routines.Indicator has_table = 3 [json_name = "has_table"];    
    string description = 4 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 7;
    map<string, google.protobuf.Any> attachments = 8;
}


message InventoryItemLabelTypeList{
    repeated InventoryItemLabelTypeData values=1;
}


// Inventory Item Status History
message InventoryItemStatusData {
    option (routines.entity_type) = "InventoryItemStatus";
    option (routines.keys).keys = "inventory_item_id, status_id, status_datetime";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId, statusId, statusDatetime
    // fields
        
    string inventory_item_id = 1 [json_name = "inventory_item_id"];
    string status_id = 2 [json_name = "status_id"]; // StatusItem    
    google.protobuf.Timestamp status_datetime = 3 [json_name = "status_datetime"];    
    google.protobuf.Timestamp status_end_datetime = 4 [json_name = "status_end_datetime"];    
    string change_by_user_login_id = 5 [json_name = "change_by_user_login_id"];    
    string owner_party_id = 6 [json_name = "owner_party_id"];    
    string product_id = 7 [json_name = "product_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 9 [json_name = "created_tx_stamp"];    
    string id = 10 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message InventoryItemStatusList{
    repeated InventoryItemStatusData values=1;
}


// Inventory Item Temporary Reservation
message InventoryItemTempResData {
    option (routines.entity_type) = "InventoryItemTempRes";
    option (routines.keys).keys = "visit_id, product_id, product_store_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: visitId, productId, productStoreId
    // fields
        
    string visit_id = 1 [json_name = "visit_id"];    
    string product_id = 2 [json_name = "product_id"];    
    string product_store_id = 3 [json_name = "product_store_id"];    
    routines.FixedPoint quantity = 4 [json_name = "quantity"];    
    google.protobuf.Timestamp reserved_date = 5 [json_name = "reserved_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];    
    string id = 8 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message InventoryItemTempResList{
    repeated InventoryItemTempResData values=1;
}


// Inventory Item Type Attribute
message InventoryItemTypeAttrData {
    option (routines.entity_type) = "InventoryItemTypeAttr";
    option (routines.keys).keys = "inventory_item_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemTypeId, attrName
    // fields
        
    string inventory_item_type_id = 1 [json_name = "inventory_item_type_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string description = 3 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message InventoryItemTypeAttrList{
    repeated InventoryItemTypeAttrData values=1;
}


// Inventory Item Variance
message InventoryItemVarianceData {
    option (routines.entity_type) = "InventoryItemVariance";
    option (routines.keys).keys = "inventory_item_id, physical_inventory_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryItemId, physicalInventoryId
    // fields
        
    string inventory_item_id = 1 [json_name = "inventory_item_id"];    
    string physical_inventory_id = 2 [json_name = "physical_inventory_id"];
    string variance_reason_id = 3 [json_name = "variance_reason_id"]; // VarianceReason    
    routines.FixedPoint available_to_promise_var = 4 [json_name = "available_to_promise_var"];    
    routines.FixedPoint quantity_on_hand_var = 5 [json_name = "quantity_on_hand_var"];    
    string comments = 6 [json_name = "comments"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 8 [json_name = "created_tx_stamp"];    
    string id = 9 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message InventoryItemVarianceList{
    repeated InventoryItemVarianceData values=1;
}


// Inventory Transfer
message InventoryTransferData {
    option (routines.entity_type) = "InventoryTransfer";
    option (routines.keys).keys = "inventory_transfer_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: inventoryTransferId
    // fields
        
    string inventory_transfer_id = 1 [json_name = "inventory_transfer_id"];
    string status_id = 2 [json_name = "status_id"]; // StatusItem    
    string inventory_item_id = 3 [json_name = "inventory_item_id"];    
    string facility_id = 4 [json_name = "facility_id"];    
    string location_seq_id = 5 [json_name = "location_seq_id"];    
    string container_id = 6 [json_name = "container_id"];    
    string facility_id_to = 7 [json_name = "facility_id_to"];    
    string location_seq_id_to = 8 [json_name = "location_seq_id_to"];    
    string container_id_to = 9 [json_name = "container_id_to"];    
    string item_issuance_id = 10 [json_name = "item_issuance_id"];    
    google.protobuf.Timestamp send_date = 11 [json_name = "send_date"];    
    google.protobuf.Timestamp receive_date = 12 [json_name = "receive_date"];    
    string comments = 13 [json_name = "comments"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 14 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 15 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 22;
    map<string, google.protobuf.Any> attachments = 23;
}


message InventoryTransferList{
    repeated InventoryTransferData values=1;
}


// Lot
message LotData {
    option (routines.entity_type) = "Lot";
    option (routines.keys).keys = "lot_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: lotId
    // fields
        
    string lot_id = 1 [json_name = "lot_id"];    
    google.protobuf.Timestamp creation_date = 2 [json_name = "creation_date"];    
    routines.FixedPoint quantity = 3 [json_name = "quantity"];    
    google.protobuf.Timestamp expiration_date = 4 [json_name = "expiration_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message LotList{
    repeated LotData values=1;
}


// Physical Inventory
message PhysicalInventoryData {
    option (routines.entity_type) = "PhysicalInventory";
    option (routines.keys).keys = "physical_inventory_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: physicalInventoryId
    // fields
        
    string physical_inventory_id = 1 [json_name = "physical_inventory_id"];    
    google.protobuf.Timestamp physical_inventory_date = 2 [json_name = "physical_inventory_date"];    
    string party_id = 3 [json_name = "party_id"];    
    string general_comments = 4 [json_name = "general_comments"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message PhysicalInventoryList{
    repeated PhysicalInventoryData values=1;
}


